--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,3 +1,14 @@
-body {
-  background: red;
-}
+@import "variables";
+@import "fonts";
+
+@import "blocks/visually-hidden";
+@import "blocks/button";
+@import "blocks/page";
+@import "blocks/page-main";
+@import "blocks/page-header";
+@import "blocks/promo";
+@import "blocks/catalog-section";
+@import "blocks/process";
+@import "blocks/example";
+@import "blocks/contacts";
+@import "blocks/page-footer";
