--- a/source/sass/blocks/process.scss
+++ b/source/sass/blocks/process.scss
@@ -1,5 +1,8 @@
+.process {
+  padding: 20px;
+}
+
 .process__list {
-  font-family: $font-page;
   font-size: 14px;
   line-height: 18px;
   font-weight: $regular;
