--- a/source/sass/blocks/promo.scss
+++ b/source/sass/blocks/promo.scss
@@ -3,9 +3,8 @@
 
   color: $color-white;
 
-  background-color: $color-background;
-  background-image: url("../../img/background/background-desktop.jpg");
-
+  background: $basic-green;
+  background: url("../../img/background/background-header.jpg");
   background-repeat: no-repeat;
 
   text-align: center;
