--- a/source/css/style.css
+++ b/source/css/style.css
@@ -1,2 +1,377 @@
+@font-face {
+  font-family: "Oswald";
+  font-weight: 500;
+  font-style: normal;
+  font-display: swap;
+  src: url("../fonts/oswaldmedium.woff2") format("woff2"), url("../fonts/oswaldmedium.woff") format("woff");
+}
+@font-face {
+  font-family: "Oswald";
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+  src: url("../fonts/oswaldregular.woff2") format("woff2"), url("../fonts/oswaldregular.woff") format("woff");
+}
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
 
+.button {
+  font-family: "Oswald", Arial, sans-serif;
+  font-size: 14px;
+  line-height: 18px;
+  color: #ffffff;
+  text-transform: uppercase;
+  text-decoration: none;
+  border: none;
+  background-color: #68B738;
+}
+
+.button--disabled {
+  background-color: #F2F2F2;
+  color: #444444;
+}
+
+.card {
+  font-family: "Oswald", Arial, sans-serif;
+  font-size: 12px;
+  line-height: 16px;
+  font-weight: 400;
+  color: #444444;
+}
+
+.card__heading {
+  font-size: 16px;
+  line-height: 20px;
+  font-weight: 400;
+  color: #222222;
+  text-transform: uppercase;
+}
+
+.card__list {
+  font-size: 12px;
+}
+
+.card-row {
+  padding: 20px;
+}
+
+.card-row__heading {
+  font-size: 16px;
+  line-height: 20px;
+  font-weight: 400;
+  color: #222222;
+  text-transform: uppercase;
+}
+
+.card-row__list {
+  font-size: 12px;
+  line-height: 16px;
+  font-weight: 400;
+  color: #444444;
+}
+
+.catalog-additional {
+  padding: 20px;
+}
+
+.catalog-additional__heading {
+  font-family: "Oswald", Arial, sans-serif;
+  font-size: 24px;
+  line-height: 24px;
+  font-weight: 400;
+  color: #222222;
+}
+
+.catalog-additional__list {
+  list-style: none;
+}
+
+.catalog-list {
+  padding: 20px;
+}
+
+.catalog-sections__item {
+  padding: 20px;
+  background-color: #F2F2F2;
+}
+
+.catalog-sections__heading {
+  font-family: "Oswald", Arial, sans-serif;
+  font-size: 24px;
+  line-height: 37px;
+  font-weight: 400;
+  text-transform: uppercase;
+}
+
+.catalog-sections__text {
+  font-family: "Oswald", Arial, sans-serif;
+  font-size: 14px;
+  line-height: 18px;
+  font-weight: 400;
+  color: #444444;
+}
+
+.catalog-sections__link {
+  font-family: "Oswald", Arial, sans-serif;
+  font-size: 16px;
+  line-height: 16px;
+  font-weight: 400;
+  color: #000000;
+  text-transform: uppercase;
+  text-decoration: none;
+}
+
+.contacts {
+  font-family: "Oswald", Arial, sans-serif;
+  font-weight: 400;
+  padding: 20px;
+}
+
+.contacts__text {
+  font-size: 16px;
+  line-height: 20px;
+  text-transform: uppercase;
+}
+
+.contacts__address {
+  font-size: 14px;
+  color: #444444;
+}
+
+.control {
+  color: #000000;
+  font-family: "Oswald", Arial, sans-serif;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 18px;
+  text-transform: uppercase;
+}
+
+.developer {
+  color: #444444;
+  font-size: 16px;
+  text-decoration: none;
+}
+
+.example {
+  background-color: #F2F2F2;
+  padding: 26px 20px 40px;
+}
+
+.example__text {
+  color: #444444;
+}
+
+.example__list {
+  text-align: center;
+}
+
+.example__title {
+  color: #444444;
+  font-size: 12px;
+  line-height: 1;
+  text-transform: lowercase;
+}
+
+.example__definition {
+  font-family: "Oswald", Arial, sans-serif;
+  font-size: 24px;
+  line-height: 1;
+  text-transform: uppercase;
+}
+
+.example__spending {
+  font-family: "Oswald", Arial, sans-serif;
+  line-height: 20px;
+  text-transform: uppercase;
+}
+
+.switcher__button {
+  font-size: 16px;
+  line-height: 20px;
+  text-transform: uppercase;
+  border: none;
+  background: none;
+}
+
+.field {
+  font-family: "Oswald", Arial, sans-serif;
+  font-size: 16px;
+  line-height: 18px;
+  font-weight: 400;
+  text-transform: uppercase;
+  color: #444444;
+  border-top: none;
+  border-right: none;
+  border-left: none;
+}
+
+.field__input {
+  font-family: inherit;
+  font-size: 16px;
+  line-height: 18px;
+  color: #444444;
+  text-transform: uppercase;
+}
+
+.field-group {
+  padding: 20px 0;
+  border: none;
+}
+
+.field-group__heading {
+  font-family: "Oswald", Arial, sans-serif;
+  font-size: 24px;
+  font-weight: 400;
+  line-height: 26px;
+}
+
+.field-group__list {
+  padding: 0;
+  list-style: none;
+}
+
+.form {
+  padding: 20px;
+}
+
+.form__group {
+  margin: 0;
+}
+
+.offer {
+  padding: 40px;
+  color: #ffffff;
+  background-color: #68B738;
+  background-image: url("../img/background/cat-offer.jpg");
+  font-size: 16px;
+  text-align: center;
+  line-height: 20px;
+}
+
+.page {
+  font-family: Arial, sans-serif;
+  font-size: 14px;
+  line-height: 18px;
+  font-weight: 400;
+  color: #000000;
+  background-color: #ffffff;
+}
+
+.page__body {
+  margin: 0 auto;
+}
+
+.page-footer {
+  padding: 20px;
+  background-color: #F2F2F2;
+}
+
+.page-main__heading {
+  font-family: "Oswald", Arial, sans-serif;
+  font-size: 36px;
+  font-weight: 400;
+  line-height: 40px;
+}
+
+.page-main__subheading {
+  font-family: "Oswald", Arial, sans-serif;
+  font-size: 14px;
+  line-height: 18px;
+  text-transform: uppercase;
+}
+
+.process {
+  padding: 20px;
+}
+
+.process__list {
+  font-size: 14px;
+  line-height: 18px;
+  font-weight: 400;
+  color: #444444;
+  list-style: none;
+}
+
+.promo {
+  padding: 20px;
+  color: #ffffff;
+  background: #68B738;
+  background: url("../img/background/background-header.jpg");
+  background-repeat: no-repeat;
+  text-align: center;
+}
+
+.promo__heading {
+  font-family: "Oswald", Arial, sans-serif;
+  font-size: 36px;
+  line-height: 1;
+  font-weight: 400;
+}
+
+.promo__text {
+  font-family: "Oswald", Arial, sans-serif;
+  font-size: 14px;
+  line-height: 1;
+  font-weight: 400;
+  text-transform: uppercase;
+}
+
+.show-more__heading {
+  font-family: "Oswald", Arial, sans-serif;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 20px;
+  text-transform: uppercase;
+}
+
+.show-more__text {
+  color: #444444;
+  font-size: 12px;
+  line-height: 16px;
+}
+
+.site-menu {
+  font-family: "Oswald", Arial, sans-serif;
+  font-size: 20px;
+  line-height: 1;
+  text-align: center;
+  text-transform: uppercase;
+  list-style: none;
+}
+
+.site-menu__link {
+  color: #000000;
+  text-decoration: none;
+}
+
+.switcher__button {
+  font-family: "Oswald", Arial, sans-serif;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 20px;
+  text-transform: uppercase;
+}
+
+.show-more__heading {
+  font-family: "Oswald", Arial, sans-serif;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 20px;
+  text-transform: uppercase;
+}
+
+.show-more__text {
+  color: #444444;
+  font-size: 12px;
+  line-height: 16px;
+}
 /*# sourceMappingURL=style.css.map */
