--- a/source/sass/blocks/catalog-section.scss
+++ b/source/sass/blocks/catalog-section.scss
@@ -12,7 +12,7 @@
 }
 
 .catalog-sections__text {
-  font-family: $font-page;
+  font-family: $font-heading;
   font-size: 14px;
   line-height: 18px;
   font-weight: $regular;
@@ -20,7 +20,7 @@
 }
 
 .catalog-sections__link {
-  font-family: $font-page;
+  font-family: $font-heading;
   font-size: 16px;
   line-height: 16px;
   font-weight: $regular;
