--- a/source/sass/blocks/page.scss
+++ b/source/sass/blocks/page.scss
@@ -1,5 +1,5 @@
 .page {
-  font-family: $font-page;
+  font-family: $font-body;
   font-size: 14px;
   line-height: 18px;
   font-weight: $regular;
@@ -9,5 +9,5 @@
 }
 
 .page__body {
-  margin: 0;
+  margin: 0 auto;
 }
