--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -3,12 +3,32 @@
 
 @import "blocks/visually-hidden";
 @import "blocks/button";
-@import "blocks/page";
-@import "blocks/page-main";
-@import "blocks/page-header";
-@import "blocks/promo";
+@import "blocks/card";
+@import "blocks/card-row";
+@import "blocks/catalog-additional";
+@import "blocks/catalog-list";
 @import "blocks/catalog-section";
-@import "blocks/process";
-@import "blocks/example";
 @import "blocks/contacts";
+@import "blocks/control";
+@import "blocks/developer";
+@import "blocks/example";
+@import "blocks/field";
+@import "blocks/field-group";
+@import "blocks/form";
+@import "blocks/offer";
+@import "blocks/page";
 @import "blocks/page-footer";
+@import "blocks/page-main";
+@import "blocks/process";
+@import "blocks/promo";
+@import "blocks/show-more";
+@import "blocks/site-menu";
+@import "blocks/switcher";
+
+
+
+
+
+
+
+@import "blocks/show-more";
