Адаптивная сетка для главной страницы

--- a/source/sass/blocks/catalog-section.scss
+++ b/source/sass/blocks/catalog-section.scss
@@ -1,6 +1,34 @@
+.catalog-sections__container {
+
+  @media (min-width: $desktop-width) {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 80px;
+  }
+}
 .catalog-sections__item {
   padding: 20px;
   background-color: $basic-grey;
+
+  @media (min-width: $tablet-width) {
+    padding: 52px;
+  }
+
+  @media (min-width: $desktop-width) {
+    padding: 41px 52px;
+  }
+
+  & + & {
+    margin-top: 20px;
+
+    @media (min-width: $tablet-width) {
+      margin-top: 30px;
+    }
+
+    @media (min-width: $desktop-width) {
+      margin-top: 0;
+    }
+  }
 }
 
 .catalog-sections__heading {
