--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -9,26 +9,24 @@
 @import "blocks/catalog-list";
 @import "blocks/catalog-section";
 @import "blocks/contacts";
+@import "blocks/container";
 @import "blocks/control";
 @import "blocks/developer";
 @import "blocks/example";
 @import "blocks/field";
 @import "blocks/field-group";
 @import "blocks/form";
+@import "blocks/logo";
 @import "blocks/offer";
 @import "blocks/page";
 @import "blocks/page-footer";
+@import "blocks/page-header";
 @import "blocks/page-main";
 @import "blocks/process";
 @import "blocks/promo";
 @import "blocks/show-more";
 @import "blocks/site-menu";
 @import "blocks/switcher";
-
-
-
-
-
 
 
 @import "blocks/show-more";
