--- a/source/css/style.css
+++ b/source/css/style.css
@@ -98,9 +98,40 @@
   padding: 20px;
 }
 
+@media (min-width: 1440px) {
+  .catalog-sections__container {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 80px;
+  }
+}
+
 .catalog-sections__item {
   padding: 20px;
   background-color: #F2F2F2;
+}
+@media (min-width: 768px) {
+  .catalog-sections__item {
+    padding: 52px;
+  }
+}
+@media (min-width: 1440px) {
+  .catalog-sections__item {
+    padding: 41px 52px;
+  }
+}
+.catalog-sections__item + .catalog-sections__item {
+  margin-top: 20px;
+}
+@media (min-width: 768px) {
+  .catalog-sections__item + .catalog-sections__item {
+    margin-top: 30px;
+  }
+}
+@media (min-width: 1440px) {
+  .catalog-sections__item + .catalog-sections__item {
+    margin-top: 0;
+  }
 }
 
 .catalog-sections__heading {
@@ -132,7 +163,16 @@
 .contacts {
   font-family: "Oswald", Arial, sans-serif;
   font-weight: 400;
-  padding: 20px;
+}
+
+.contacts__container {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
+
+.contacts__map {
+  margin: 0 auto;
+  grid-column: 1/3;
 }
 
 .contacts__text {
@@ -144,6 +184,24 @@
 .contacts__address {
   font-size: 14px;
   color: #444444;
+}
+
+.container {
+  margin-right: 20px;
+  margin-left: 20px;
+}
+@media (min-width: 768px) {
+  .container {
+    margin-right: 30px;
+    margin-left: 30px;
+  }
+}
+@media (min-width: 1440px) {
+  .container {
+    width: 1220px;
+    margin-right: auto;
+    margin-left: auto;
+  }
 }
 
 .control {
@@ -163,7 +221,14 @@
 
 .example {
   background-color: #F2F2F2;
-  padding: 26px 20px 40px;
+}
+
+@media (min-width: 1440px) {
+  .example__container {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 80px;
+  }
 }
 
 .example__text {
@@ -192,14 +257,6 @@
   font-family: "Oswald", Arial, sans-serif;
   line-height: 20px;
   text-transform: uppercase;
-}
-
-.switcher__button {
-  font-size: 16px;
-  line-height: 20px;
-  text-transform: uppercase;
-  border: none;
-  background: none;
 }
 
 .field {
@@ -247,6 +304,19 @@
   margin: 0;
 }
 
+@media (max-width: 767px) {
+  .logo {
+    display: grid;
+    grid-template-columns: 34px 1fr;
+    gap: 16px;
+    align-items: center;
+  }
+}
+
+.logo__sign {
+  justify-self: center;
+}
+
 .offer {
   padding: 40px;
   color: #ffffff;
@@ -258,6 +328,8 @@
 }
 
 .page {
+  min-width: 320px;
+  height: 100%;
   font-family: Arial, sans-serif;
   font-size: 14px;
   line-height: 18px;
@@ -267,12 +339,64 @@
 }
 
 .page__body {
-  margin: 0 auto;
+  min-height: 100%;
+  margin: 0;
+  display: grid;
+  grid-template-rows: min-content 1fr min-content;
 }
 
 .page-footer {
   padding: 20px;
   background-color: #F2F2F2;
+}
+
+@media (min-width: 768px) {
+  .page-footer__container {
+    display: grid;
+    grid-template-columns: 164px 1fr 164px;
+    gap: 16px;
+  }
+}
+
+@media (min-width: 768px) {
+  .page-header__nav {
+    margin: 0 30px;
+    display: grid;
+    grid-template-columns: 174px 1fr;
+    gap: 94px;
+  }
+}
+@media (min-width: 1440px) {
+  .page-header__nav {
+    width: 1220px;
+    margin: 0 auto;
+    grid-template-columns: 202px 1fr;
+  }
+}
+
+@media (max-width: 767px) {
+  .page-header__bar {
+    margin: 0 auto;
+    padding: 12px 20px 17px;
+    display: grid;
+    grid-template-columns: 34px 1fr 34px;
+    gap: 16px;
+    align-items: center;
+  }
+}
+
+.page-header__logo {
+  grid-column: 1/3;
+}
+
+.page-header__menu {
+  margin: 0;
+}
+
+@media (min-width: 768px) {
+  .page-header__toggle {
+    display: none;
+  }
 }
 
 .page-main__heading {
@@ -289,25 +413,60 @@
   text-transform: uppercase;
 }
 
-.process {
-  padding: 20px;
-}
-
 .process__list {
   font-size: 14px;
   line-height: 18px;
   font-weight: 400;
   color: #444444;
   list-style: none;
+  padding: 0;
+  margin: 0;
+}
+@media (min-width: 768px) {
+  .process__list {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    column-gap: 153px;
+    row-gap: 37px;
+  }
+}
+@media (min-width: 1440px) {
+  .process__list {
+    grid-template-columns: repeat(4, 1fr);
+    gap: 94px;
+  }
+}
+
+@media (max-width: 767px) {
+  .process__item + .process__item {
+    margin-top: 20px;
+  }
 }
 
 .promo {
-  padding: 20px;
   color: #ffffff;
   background: #68B738;
-  background: url("../img/background/background-header.jpg");
+  background: url("../img/background/bg-header--mobile.jpg");
   background-repeat: no-repeat;
   text-align: center;
+}
+@media (min-width: 768px) {
+  .promo {
+    color: #000000;
+    background-color: transparent;
+    text-align: left;
+  }
+}
+
+@media (min-width: 768px) {
+  .promo__container {
+    padding-left: 90px;
+  }
+}
+@media (min-width: 1440px) {
+  .promo__container {
+    padding-left: 80px;
+  }
 }
 
 .promo__heading {
@@ -341,11 +500,24 @@
 
 .site-menu {
   font-family: "Oswald", Arial, sans-serif;
-  font-size: 20px;
+  font-size: 18px;
   line-height: 1;
   text-align: center;
   text-transform: uppercase;
   list-style: none;
+  padding: 0;
+}
+@media (max-width: 767px) {
+  .site-menu {
+    font-size: 20px;
+    font-weight: 500;
+  }
+}
+@media (min-width: 768px) {
+  .site-menu {
+    display: flex;
+    justify-content: flex-end;
+  }
 }
 
 .site-menu__link {
