--- a/source/sass/blocks/site-menu.scss
+++ b/source/sass/blocks/site-menu.scss
@@ -1,10 +1,22 @@
 .site-menu {
   font-family: $font-heading;
-  font-size: 20px;
+  font-size: 18px;
   line-height: 1;
   text-align: center;
   text-transform: uppercase;
   list-style: none;
+
+  padding: 0;
+
+  @media (max-width: $only-mobile-width) {
+    font-size: 20px;
+    font-weight: 500;
+  }
+
+  @media (min-width: $tablet-width) {
+    display: flex;
+    justify-content: flex-end;
+  }
 }
 
 .site-menu__link {
