--- a/source/sass/blocks/field-group.scss
+++ b/source/sass/blocks/field-group.scss
@@ -15,3 +15,27 @@
 
   list-style: none;
 }
+
+.field-group__list--contacts {
+
+  @media (min-width: $desktop-width) {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 78px;
+  }
+}
+
+.field-group__list--additional {
+
+  @media (min-width: $tablet-width) {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    column-gap: 80px;
+    row-gap: 32px;
+  }
+
+  @media (min-width: $desktop-width) {
+    grid-template-columns: repeat(4, 1fr);
+  }
+
+}
