--- a/source/sass/blocks/button.scss
+++ b/source/sass/blocks/button.scss
@@ -1,4 +1,8 @@
 .button {
+  display: inline-block;
+  padding: 11px;
+  text-align: center;
+
   font-family: $font-heading;
   font-size: 14px;
   line-height: 18px;
