--- a/source/sass/blocks/logo.scss
+++ b/source/sass/blocks/logo.scss
@@ -1,9 +1,21 @@
 .logo {
-  @media (max-width: $only-mobile-width) {
+  &:not(.logo--footer) {
     display: grid;
     grid-template-columns: 34px 1fr;
     gap: 16px;
     align-items: center;
+  }
+
+  &:hover {
+    opacity: 0.8;
+  }
+
+  &:active {
+    opacity: 0.6;
+  }
+
+  img {
+    display: block;
   }
 }
 
