--- a/source/sass/blocks/page-header.scss
+++ b/source/sass/blocks/page-header.scss
@@ -1,6 +1,7 @@
 .page-header__nav {
   @media (min-width: $tablet-width) {
-    margin: 0 30px;
+    margin: 0 auto;
+    padding: 24px 0 0;
 
     display: grid;
     grid-template-columns: 174px 1fr;
@@ -10,6 +11,7 @@
   @media (min-width: $desktop-width) {
     width: 1220px;
     margin: 0 auto;
+    padding: 53px 0 0;
     grid-template-columns: 202px 1fr;
   }
 }
@@ -21,7 +23,6 @@
     display: grid;
     grid-template-columns: 34px 1fr 34px;
     gap: 16px;
-    align-items: center;
   }
 }
 
