Адаптив раздела catalog
Добавила иконки, отступы, стилизовала раздел для всех версий сайта.

Необходимо добавить стрелку.

--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -15,4 +15,5 @@ $color-white: #ffffff;
 $color-black: #000000;
 $dark-grey: #444444;
 $basic-grey: #F2F2F2;
+$color-grey: #D9D9D9;
 $color-heading: #222222;
