--- a/source/sass/blocks/catalog-section.scss
+++ b/source/sass/blocks/catalog-section.scss
@@ -42,22 +42,161 @@
 }
 
 .catalog-sections__heading {
+  position: relative;
+
   font-family: $font-heading;
   font-size: 24px;
   line-height: 37px;
   font-weight: $regular;
   text-transform: uppercase;
+
+  display: flex;
+  align-items: center;
+  padding-left: 71px;
+  min-height: 50px;
+  margin: 0 0 22px;
+
+  @media (min-width: $tablet-width) {
+    position: static;
+
+    font-size: 36px;
+
+    padding-left: 0;
+    margin-bottom: 24px;
+  }
+
+  @media (min-width: $desktop-width) {
+    position: relative;
+
+    padding-left: 162px;
+    margin-bottom: 39px;
+    min-height: 100px;
+  }
+
+  &::before, &::after {
+    content: "";
+    position: absolute;
+  }
+
+  &::after {
+    background-size: contain;
+  }
+
+  &::before {
+    width: 50px;
+    height: 50px;
+    background-color: $basic-green;
+    left: 2px;
+    border-radius: 50%;
+
+    @media (min-width: $tablet-width) {
+      width: 200px;
+      height: 200px;
+
+      right: 62px;
+      left: auto;
+      top: calc(50% - 100px);
+    }
+
+    @media (min-width: $desktop-width) {
+      width: 100px;
+      height: 100px;
+      left: 0;
+      right: auto;
+      top: 0;
+    }
+  }
+}
+
+.catalog-sections__heading--slim {
+
+  &::after {
+    width: 36px;
+    height: 50px;
+    left: 7px;
+    top: -3px;
+
+    background-image: url("../../img/icons/cat-slim.svg");
+
+    @media (min-width: $tablet-width) {
+      left: auto;
+      top: calc(50% - 111px);
+      right: 92px;
+
+      width: 140px;
+      height: 194px;
+    }
+
+    @media (min-width: $desktop-width) {
+      top: calc(50% - 54px);
+      left: 15px;
+
+      width: 70px;
+      height: 97px;
+    }
+  }
+}
+
+.catalog-sections__heading--pro {
+
+  &::after {
+    width: 67px;
+    height: 28px;
+    left: -9.5px;
+    top: 11px;
+
+    background-image: url("../../img/icons/cat-pro.svg");
+
+    @media (min-width: $tablet-width) {
+      top: calc(50% - 56px);
+      right: 28px;
+      left: auto;
+
+      width: 268px;
+      height: 112px;
+    }
+
+    @media (min-width: $desktop-width) {
+      top: calc(50% - 22px);
+      left: -19px;
+
+      width: 134px;
+      height: 56px;
+    }
+  }
 }
 
 .catalog-sections__text {
-  font-family: $font-heading;
+  font-family: $font-body;
   font-size: 14px;
   line-height: 18px;
   font-weight: $regular;
   color: $dark-grey;
+
+  margin: 0 0 15px;
+  padding-bottom: 23px;
+  border-bottom: 1px solid $color-grey;
+
+  @media (min-width: $tablet-width) {
+    font-size: 16px;
+    line-height: 24px;
+
+    padding-bottom: 0;
+    margin-bottom: 48px;
+    border: none;
+  }
+
+  @media (min-width: $desktop-width) {
+    margin-bottom: 23px;
+  }
 }
 
 .catalog-sections__link {
+  display: grid;
+  grid-template-columns: max-content 32px;
+  align-items: center;
+  gap: 15px;
+
   font-family: $font-heading;
   font-size: 16px;
   line-height: 16px;
