Стили для активных состояний ссылок и кнопок + откорректировала ссылки в разметке
 Шапки сайта и раздела каталог на главной странице

--- a/source/sass/blocks/button.scss
+++ b/source/sass/blocks/button.scss
@@ -13,6 +13,14 @@
   border: none;
 
   background-color: $basic-green;
+
+  &:hover {
+    background-color: $basic-green-2;
+  }
+
+  &:active {
+    color: rgba($color-white, 0.3);
+  }
 }
 
 .button--disabled {
