--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -11,9 +11,13 @@ $medium: 500;
 
 // colors
 $basic-green: #68B738;
-$color-white: #ffffff;
+$basic-green-2: #5EAA2F;
+
 $color-black: #000000;
+$color-heading: #222222;
 $dark-grey: #444444;
+
+$color-white: #ffffff;
 $basic-grey: #F2F2F2;
 $color-grey: #D9D9D9;
-$color-heading: #222222;
+$menu-border: #E6E6E6;
