--- a/source/sass/blocks/example.scss
+++ b/source/sass/blocks/example.scss
@@ -3,10 +3,14 @@
   background-color: $basic-grey;
 
   @media (min-width: $tablet-width) {
-    padding-top: 43px;
+    padding: 43px 0 55px;
 
     border-top: 1px solid $color-grey;
-    background-image: linear-gradient(to top, $color-grey 462px, $color-white 462px);
+    background-image: linear-gradient(to top, $basic-grey 462px, $color-white 462px);
+  }
+
+  @media (min-width: $desktop-width) {
+    padding-bottom: 75px;
   }
 }
 
@@ -24,8 +28,15 @@
   @media (min-width: $tablet-width) {
     display: grid;
     grid-template-columns: 1fr 1fr;
+    column-gap: 32px;
 
     margin-bottom: 80px;
+  }
+
+  @media (min-width: $desktop-width) {
+    grid-template-columns: 366px 1fr;
+    width: 436px;
+    margin-bottom: 0;
   }
 }
 
@@ -41,7 +52,13 @@
 
   @media (min-width: $tablet-width) {
     grid-column: 1/-1;
+    margin-top: 23px;
     margin-bottom: 54px;
+  }
+
+  @media (min-width: $desktop-width) {
+    margin-top: 106px;
+    margin-bottom: 69px;
   }
 }
 
@@ -52,6 +69,15 @@
 
   text-align: center;
   margin: 0 0 23px;
+
+  @media (min-width: $tablet-width) {
+    grid-template-columns: 162px 162px;
+    gap: 42px;
+  }
+
+  @media (min-width: $desktop-width) {
+    margin-bottom: 55px;
+  }
 }
 
 .example__item {
@@ -60,13 +86,16 @@
   align-items: center;
 
   padding: 14px 0 0;
-
   border: 1px solid $color-grey;
   border-radius: 4px;
+
+  @media (min-width: $desktop-width) {
+    padding: 0;
+  }
 }
 
 .example__title {
-  max-width: 77px;
+  width: 77px;
   color: $dark-grey;
   font-size: 12px;
   line-height: 1;
@@ -76,7 +105,14 @@
   background-color: $basic-grey;
 
   @media (min-width: $tablet-width) {
+    width: auto;
     background-color: $color-white;
+    padding: 0 7px;
+    margin-bottom: -6px;
+  }
+
+  @media (min-width: $desktop-width) {
+    background-color: $basic-grey;
   }
 }
 
@@ -88,6 +124,10 @@
   font-size: 24px;
   line-height: 1;
   text-transform: uppercase;
+
+  @media (min-width: $tablet-width) {
+    padding-bottom: 11px;
+  }
 }
 
 .example__spending {
@@ -100,11 +140,26 @@
   margin: 0;
 
   @media (min-width: $tablet-width) {
+    display: flex;
+    flex-direction: column;
+    gap: 9px;
+
     font-size: 20px;
     text-align: right;
     padding-left: 50%;
-    max-width: 180px;
+  }
 
+  @media (min-width: $desktop-width) {
+    grid-column: 1 / 2;
+
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    text-align: left;
+    padding-left: 0;
+
+    span:last-child {
+      text-align: center;
+    }
   }
 }
 
