--- a/source/sass/blocks/page.scss
+++ b/source/sass/blocks/page.scss
@@ -9,6 +9,11 @@
   color: $color-black;
 
   background-color: $color-white;
+
+  @media (min-width: $tablet-width) {
+    font-size: 16px;
+    line-height: 24px;
+  }
 }
 
 .page__body {
