--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -1,6 +1,6 @@
 //width
 $tablet-width: 768px;
-$desktop-width: 1440px;
+$desktop-width: 1280px;
 $only-mobile-width: 767px;
 
 //fonts
@@ -15,9 +15,12 @@ $basic-green-2: #5EAA2F;
 
 $color-black: #000000;
 $color-heading: #222222;
-$dark-grey: #444444;
+
 
 $color-white: #ffffff;
+
+$dark-grey: #444444;
 $basic-grey: #F2F2F2;
 $color-grey: #D9D9D9;
+$color-grey-2: #CDCDCD;
 $menu-border: #E6E6E6;
