--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -26,6 +26,7 @@
 @import "blocks/promo";
 @import "blocks/show-more";
 @import "blocks/site-menu";
+@import "blocks/social";
 @import "blocks/switcher";
 
 
