--- a/source/sass/blocks/site-menu.scss
+++ b/source/sass/blocks/site-menu.scss
@@ -9,6 +9,12 @@
   padding: 0;
 
   @media (max-width: $only-mobile-width) {
+    position: absolute;
+    background-color: $color-white;
+    width: 100%;
+    left: 0;
+    top: 66px;
+
     border-top: 1px solid $menu-border;
     font-size: 20px;
     font-weight: 500;
