--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -17,6 +17,7 @@
 @import "blocks/field-group";
 @import "blocks/form";
 @import "blocks/logo";
+@import "blocks/main-nav";
 @import "blocks/offer";
 @import "blocks/page";
 @import "blocks/page-footer";
