--- a/source/sass/blocks/site-menu.scss
+++ b/source/sass/blocks/site-menu.scss
@@ -10,6 +10,7 @@
 
   @media (max-width: $only-mobile-width) {
     position: absolute;
+    z-index: 2;
     background-color: $color-white;
     width: 100%;
     left: 0;
