--- a/source/sass/blocks/button.scss
+++ b/source/sass/blocks/button.scss
@@ -1,7 +1,9 @@
 .button {
   display: inline-block;
-  padding: 11px;
+  padding: 11px 0;
   text-align: center;
+
+  width: 100%;
 
   font-family: $font-heading;
   font-size: 14px;
