--- a/source/sass/blocks/offer.scss
+++ b/source/sass/blocks/offer.scss
@@ -1,11 +1,80 @@
 .offer {
-  padding: 40px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+
+  padding: 60px 0 43px;
 
   color: $color-white;
   background-color: $basic-green;
-  background-image: url("../../img/background/cat-offer.jpg");
+  background-image:
+    url("../../img/background/cat-offer.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: 50% 50%;
 
   font-size: 16px;
   text-align: center;
   line-height: 20px;
+
+  margin: 0 auto;
+
+  width: 87vw;
+  height: 87vw;
+
+  max-width: 400px;
+  max-height: 400px;
+
+  box-sizing: border-box;
+
+  @media (min-width: $tablet-width) {
+    flex-direction: row;
+
+    width: 100%;
+    height: 25vw;
+
+    max-width: 100%;
+    max-height: 100%;
+
+    padding: 57px 124px 60px 77px;
+
+    background-position: 50% 60%;
+  }
+
+  @media (min-width: $desktop-width) {
+    width: 245px;
+    height: 289px;
+
+    padding: 56px 42px 42px;
+
+    flex-direction: column;
+  }
+}
+
+.offer__icon {
+  width: 80px;
+  height: 80px;
+
+  margin: 0 auto;
+
+  background-image:  url("../../img/icons/icon_offer.svg");
+
+  @media (min-width: $tablet-width) {
+    margin: 0;
+  }
+}
+
+.offer__text {
+  margin: 0 auto;
+  width: 161px;
+
+  @media (min-width: $tablet-width) {
+    margin: 0;
+    text-align: left;
+  }
+
+  @media (min-width: $desktop-width) {
+    text-align: center;
+  }
 }
