--- a/source/sass/blocks/field.scss
+++ b/source/sass/blocks/field.scss
@@ -1,4 +1,9 @@
 .field {
+  display: grid;
+  grid-template-columns: max-content 1fr;
+  gap: 15px;
+  align-items: center;
+
   font-family: $font-heading;
   font-size: 16px;
   line-height: 18px;
@@ -9,6 +14,11 @@
   border-top: none;
   border-right: none;
   border-left: none;
+
+  @media (min-width: $tablet-width) {
+    font-size: 20px;
+    line-height: 1;
+  }
 }
 
 .field__input {
@@ -16,5 +26,14 @@
   font-size: 16px;
   line-height: 18px;
   color: $dark-grey;
+  border: 1px solid $menu-border;
   text-transform: uppercase;
+
+  margin: 0;
+  padding: 13px 15px;
+
+  @media (min-width: $tablet-width) {
+    padding: 10px 18px;
+  }
+
 }
