--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -1,4 +1,9 @@
+.form {
+  overflow: hidden;
+}
+
 .form__container {
+
   @media (min-width: $desktop-width) {
     display: grid;
     grid-template-columns: 1fr 1fr;
@@ -7,12 +12,35 @@
   }
 }
 .form__group {
+
+  position: relative;
   margin: 0;
+
+  & + & {
+    margin-top: 25px;
+  }
 
   &--contacts, &--comment, &--additional {
     @media (min-width: $desktop-width) {
       grid-column: 1/-1;
     }
+  }
+}
+
+.form__group--cat,
+.form__group--target {
+  position: relative;
+  padding-bottom: 25px;
+
+  &::after {
+    position: absolute;
+    content: '';
+    width: 100vw;
+    height: 1px;
+    background-color: $color-grey;
+
+    left: calc(50% - 50vw);
+    bottom: 0;
   }
 }
 
