--- a/source/sass/blocks/field-group.scss
+++ b/source/sass/blocks/field-group.scss
@@ -4,10 +4,40 @@
 }
 
 .field-group__heading {
+  position: relative;
   font-family: $font-heading;
   font-size: 24px;
   font-weight: 400;
   line-height: 26px;
+
+  margin-bottom: 35px;
+  padding-right: 20px;
+
+  max-width: 190px;
+
+  background-color: $color-white;
+
+}
+
+.field-group__decor {
+  position: relative;
+  z-index: -1;
+  height: 100px;
+  background-color: #919191;
+
+
+  &::after {
+    content: '';
+    position: absolute;
+
+    height: 2px;
+    width: 100vw;
+
+    left: 0;
+    top: 20px;
+
+    background-color: $basic-green;
+  }
 }
 
 .field-group__list {
@@ -15,6 +45,10 @@
   margin: 0;
 
   list-style: none;
+}
+
+.field-group__field {
+  margin-top: 25px;
 }
 
 .field-group__item {
@@ -25,6 +59,10 @@
       margin-top: 20px;
     }
   }
+}
+
+.field-group__list--additional {
+  margin-bottom: 35px;
 }
 
 .field-group__list--contacts {
