--- a/source/sass/blocks/offer.scss
+++ b/source/sass/blocks/offer.scss
@@ -72,7 +72,7 @@
 
   margin: 0 auto;
 
-  background-image:  url("../../img/icons/icon_offer.svg");
+  background-image:  url("../../img/icon_offer.svg");
 
   @media (min-width: $tablet-width) {
     margin: 0;
