--- a/source/sass/blocks/process.scss
+++ b/source/sass/blocks/process.scss
@@ -103,18 +103,18 @@
 }
 
 .process__item--leaf::before {
-  background-image: url("../../img/icons/icon_leaf.svg");
+  background-image: url("../../img/icon_leaf.svg");
 }
 
 .process__item--powder::before {
-  background-image: url("../../img/icons/icon_powder.svg");
+  background-image: url("../../img/icon_powder.svg");
 }
 
 .process__item--meal::before {
-  background-image: url("../../img/icons/icon_meal.svg");
+  background-image: url("../../img/icon_meal.svg");
 }
 
 .process__item--weight::before {
-  background-image: url("../../img/icons/icon_weight.svg");
+  background-image: url("../../img/icon_weight.svg");
 }
 
